--- a/test-must-fail-fixes-5/config
+++ b/test-must-fail-fixes-5/config
@@ -4,3 +4,4 @@
 	cc = Taylor Blau <me@ttaylorr.com>
 	cc = Johannes Sixt <j6t@kdbg.org>
 	cc = Eric Sunshine <sunshine@sunshineco.com>
+	cc = Jeff King <peff@peff.net>
