test-must-fail-fixes-6: add v2

--- a/test-must-fail-fixes-6/config
+++ b/test-must-fail-fixes-6/config
@@ -1,2 +1,4 @@
 [format]
 	outputDirectory = patches/test-must-fail-fixes-6
+	cc = Eric Sunshine <sunshine@sunshineco.com>
+	cc = Junio C Hamano <gitster@pobox.com>
