subtree: move test to root of project
The test for git subtree currently exists within its own directory. This
makes it difficult to catch any regressions that may occur as it is not
ran very often.

Move the test suite to the main test directory and guard it with the
GIT_SUBTREE prereq. This was a compromise taken that allows interested
parties to test git subtree more easily while not adding any additional
cost to those who don't care about it.

--- a/contrib/subtree/Makefile
+++ b/contrib/subtree/Makefile
@@ -48,7 +48,7 @@ $(GIT_SUBTREE_TEST): $(SCRIPT_SH)
 	cp $< $@
 
 test: $(GIT_SUBTREE_TEST)
-	$(MAKE) -C t/ test
+	$(MAKE) -C ../../t/ T=t7900-subtree.sh test
 
 clean:
 	$(MAKE) $(SCRIPT_GEN_EXTRA) clean-sh-script
