Documentation/Makefile: output to destination file dir
Documentation/Makefile correctly only generates documentation for files
under Documentation/. As a result of this, Makefiles under contrib/ have
to duplicate the logic contained here in order to generate their own
documentation. Let's avoid this and make the Makefile work when executed
on files under other directories.

$(XMLTO) only outputs files to Documentation/. Set the destination
directory so that it will correctly output to a directory when run on a
file outside of Documentation/.

--- a/Documentation/Makefile
+++ b/Documentation/Makefile
@@ -353,7 +353,7 @@ manpage-base-url.xsl: manpage-base-url.xsl.in
 
 %.1 %.5 %.7 : %.xml manpage-base-url.xsl $(wildcard manpage*.xsl)
 	$(QUIET_XMLTO)$(RM) $@ && \
-	$(XMLTO) -m $(MANPAGE_XSL) $(XMLTO_EXTRA) man $<
+	$(XMLTO) -o $(dir $@) -m $(MANPAGE_XSL) $(XMLTO_EXTRA) man $<
 
 %.xml : %.txt asciidoc.conf asciidoctor-extensions.rb GIT-ASCIIDOCFLAGS
 	$(QUIET_ASCIIDOC)$(RM) $@+ $@ && \
