Documentation/Makefile: only install if files present
Documentation/Makefile correctly only generates documentation for files
under Documentation/. As a result of this, Makefiles under contrib/ have
to duplicate the logic contained here in order to generate their own
documentation. Let's avoid this and make the Makefile work when executed
on files under other directories.

In a future commit, we will only be populating $(DOC_MAN1), leaving
$(DOC_MAN5) and $(DOC_MAN7) empty. If the Makefile attempts to install
with an empty file list, it will error out. Only attempt an $(INSTALL)
if the file list is non-empty.

--- a/Documentation/Makefile
+++ b/Documentation/Makefile
@@ -244,12 +244,18 @@ pdf: user-manual.pdf
 install: install-man
 
 install-man: man
+ifneq ($(DOC_MAN1),)
 	$(INSTALL) -d -m 755 $(DESTDIR)$(man1dir)
-	$(INSTALL) -d -m 755 $(DESTDIR)$(man5dir)
-	$(INSTALL) -d -m 755 $(DESTDIR)$(man7dir)
 	$(INSTALL) -m 644 $(DOC_MAN1) $(DESTDIR)$(man1dir)
+endif
+ifneq ($(DOC_MAN5),)
+	$(INSTALL) -d -m 755 $(DESTDIR)$(man5dir)
 	$(INSTALL) -m 644 $(DOC_MAN5) $(DESTDIR)$(man5dir)
+endif
+ifneq ($(DOC_MAN7),)
+	$(INSTALL) -d -m 755 $(DESTDIR)$(man7dir)
 	$(INSTALL) -m 644 $(DOC_MAN7) $(DESTDIR)$(man7dir)
+endif
 
 install-info: info
 	$(INSTALL) -d -m 755 $(DESTDIR)$(infodir)
