reverse-lookup-side-reflog: add v2

--- a/reverse-lookup-side-reflog/config
+++ b/reverse-lookup-side-reflog/config
@@ -1,2 +1,5 @@
 [format]
 	outputDirectory = patches/reverse-lookup-side-reflog
+	cc = "Martin Ågren" <martin.agren@gmail.com>
+	cc = "SZEDER Gábor" <szeder.dev@gmail.com>
+	cc = Junio C Hamano <gitster@pobox.com>
