reverse-lookup-side-reflog: add v3 fixup

--- a/reverse-lookup-side-reflog/config
+++ b/reverse-lookup-side-reflog/config
@@ -3,3 +3,4 @@
 	cc = "Martin Ågren" <martin.agren@gmail.com>
 	cc = "SZEDER Gábor" <szeder.dev@gmail.com>
 	cc = Junio C Hamano <gitster@pobox.com>
+	cc = Simon Ruderich <simon@ruderich.org>
